# json-logging

./: .gitignore  LICENSE  pyproject.toml
src/json_logging/: __init__.py  core.py
