[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-logging-graystorm"
version = "0.1.3"
description = "JSON logging helper for Graystorm apps"
requires-python = ">=3.11"
authors = [{ name = "Jeff Culverhouse" }]
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["json_logging*"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.14.4",
]

